[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0.17"
urlencoding = "2.1.3"
bytes = "1.10.1"
reqwest = { version = "0.12.24", features = ["native-tls"] }
url = "2.5.7"
async-trait = "0.1.89"
serde_json = "1.0.145"
futures = "0.3.31"
diesel = { version = "2.3.2", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.42"
tokio = { version = "1.48.0", features = [] }
derive_builder = "0.20.2"
aws-sdk-s3 = { version = "1.108.0", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.8", features = ["hardcoded-credentials"] }
aws-smithy-types = "1.3.3"
http-body-util = "0.1.3"
http-body = "1.0.1"
uuid = { version = "1.18.1", features = ["v4"] }
tracing = "0.1.41"

cortexmap-core = { path = "crates/cortexmap-core" }
cortexmap-infra = { path = "crates/cortexmap-infra" }
