[package]
name = "cortexmap-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
serde.workspace = true
reqwest.workspace = true
serde_json.workspace = true
futures.workspace = true
bytes.workspace = true
tokio = { version = "1.48.0", features = [] }

cortexmap-core.workspace = true
cortexmap-infra.workspace = true

[dev-dependencies]
# it's bad idea to use std-infra for tests..
std-infra = { path = "../std-infra" }
