[package]
name = "std-infra"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest.workspace = true
async-trait.workspace = true
bytes.workspace = true
diesel.workspace = true
tokio.workspace = true
derive_builder.workspace = true
futures.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true
aws-smithy-types.workspace = true
http-body-util.workspace = true
http-body.workspace = true
uuid.workspace = true

cortexmap-infra.workspace = true
